[project]
name = "comfyui-hunyuanvideoimagesguider"
description = "A specialized node for ComfyUI that enable advanced motion and animation capabilities for image as guider for video processing In Hunyuan Video."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/benjiyaya/ComfyUI-HunyuanVideoImagesGuider"
#  Used by Comfy Registry https://thefuturethinker.org

[tool.comfy]
PublisherId = "benjiyaya"
DisplayName = "ComfyUI-HunyuanVideoImagesGuider"
Icon = ""
